--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <header>
         <div class="encabezado">
             <img src="./img/logo.png" alt="logo" width="15%" class="logo">
-            <h1 class="titulo">old soul</h1>
+            <h1 class="titulo">old soul 1</h1>
         </div>
         <hr style="border: 2px solid #353232;">
         <nav>
