--- a/productos.html
+++ b/productos.html
@@ -61,6 +61,16 @@
                         <button class="comprar" data-id="2" data-nombre="Campera adidas white" data-precio="35000">agregar al carrito</button>
                     </div> 
                 </div>
+
+                <div class="campera">
+                    <img src="./img/adidas/adidas (5).png" alt="Campera Adidas dorso" class="dorso">
+                    <img src="./img/adidas/adidas (6).png" alt="Campera Adidas frente" class="frente">
+                    <div class="contenedor-camperas">
+                        <h3>Adidas edicion limitada</h3>
+                        <p>$40000</p>
+                        <button class="comprar" data-id="2" data-nombre="Adidas edicion limitada" data-precio="40000">agregar al carrito</button>
+                    </div> 
+                </div>
             </div>
         </section>
         <section id="nike">
@@ -73,9 +83,9 @@
                     <img src="./img/nike/nike (1).png" alt="Campera nike" class="frente">
                     <img src="./img/nike/nike (2).png" alt="Campera nike" class="dorso">
                     <div class="contenedor-camperas">
-                        <h3>Camperas Nike Roja</h3>
+                        <h3>Camperas Nike</h3>
                         <p>$45000</p>
-                        <button class="comprar" data-id="3" data-nombre="Campera Nike roja" data-precio="45000">agregar al carrito</button>
+                        <button class="comprar" data-id="3" data-nombre="Campera Nike" data-precio="45000">agregar al carrito</button>
                     </div>
                 </div>
                 <div class="campera">
@@ -91,9 +101,19 @@
                     <img src="./img/nike/nike (5).png" alt="Campera nike" class="frente">
                     <img src="./img/nike/nike (6).png" alt="Campera nike" class="dorso">
                     <div class="contenedor-camperas">
-                        <h3>Camperas Nike</h3>
+                        <h3>Camperas Nike Roja</h3>
                         <p>$27800</p>
-                        <button class="comprar" data-id="5" data-nombre="Campera Nike Negra" data-precio="27800">agregar al carrito</button>
+                        <button class="comprar" data-id="5" data-nombre="Campera Nike roja" data-precio="27800">agregar al carrito</button>
+                    </div>
+                </div>
+
+                <div class="campera">
+                    <img src="./img/nike/nike (7).png" alt="Campera nike" class="frente">
+                    <img src="./img/nike/nike (8).png" alt="Campera nike" class="dorso">
+                    <div class="contenedor-camperas">
+                        <h3>Nike Edicion Limitada</h3>
+                        <p>$39800</p>
+                        <button class="comprar" data-id="5" data-nombre="Nike Edicion Limitada" data-precio="39800">agregar al carrito</button>
                     </div>
                 </div>
             </div>
@@ -108,18 +128,18 @@
                     <img src="./img/puma/puma (1).png" alt="Campera puma" class="frente">
                     <img src="./img/puma/puma (2).png" alt="Campera puma" class="dorso">
                     <div class="contenedor-camperas">
-                        <h3>Camperas Adidas</h3>
-                        <p>$35000</p>
-                        <button class="comprar" data-id="6" data-nombre="Producto 1" data-precio="10">agregar al carrito</button>
+                        <h3>Chaqueta Puma </h3>
+                        <p>$27800</p>
+                        <button class="comprar" data-id="6" data-nombre="Chaqueta Puma" data-precio="27800">agregar al carrito</button>
                     </div>
                 </div>
                 <div class="campera">
                     <img src="./img/puma/puma (3).png" alt="Campera puma" class="frente">
                     <img src="./img/puma/puma (4).png" alt="Campera puma" class="dorso">
                     <div class="contenedor-camperas">
-                        <h3>Camperas Adidas</h3>
-                        <p>$35000</p>
-                        <button class="comprar" data-id="7" data-nombre="Producto 1" data-precio="10">agregar al carrito</button>
+                        <h3>Chaqueta Puma 1997</h3>
+                        <p>$30500</p>
+                        <button class="comprar" data-id="7" data-nombre="Chaqueta Puma 1997" data-precio="30500">agregar al carrito</button>
                     </div>
                 </div>
             </div>
@@ -134,27 +154,37 @@
                     <img src="./img/reebok/reebok (1).png" alt="Campera reebok" class="frente">                
                     <img src="./img/reebok/reebok (2).png" alt="Campera reebok" class="dorso">
                     <div class="contenedor-camperas">
-                        <h3>Camperas Adidas</h3>
-                        <p>$35000</p>
-                        <button class="comprar" data-id="8" data-nombre="Producto 1" data-precio="10">agregar al carrito</button>
+                        <h3>Campera Parachute reebook</h3>
+                        <p>$25400</p>
+                        <button class="comprar" data-id="8" data-nombre="Campera Parachute reebook" data-precio="25400">agregar al carrito</button>
                     </div>
                 </div>
                 <div class="campera">
                     <img src="./img/reebok/reebok (3).png" alt="Campera reebok" class="frente">
                     <img src="./img/reebok/reebok (4).png" alt="Campera reebok" class="dorso">
                     <div class="contenedor-camperas">
-                        <h3>Camperas Adidas</h3>
-                        <p>$35000</p>
-                        <button class="comprar" data-id="9" data-nombre="Producto 1" data-precio="10">agregar al carrito</button>
+                        <h3>Campera reebook</h3>
+                        <p>$22000</p>
+                        <button class="comprar" data-id="9" data-nombre="Campera reebook" data-precio="22000">agregar al carrito</button>
                     </div>
                 </div>
                 <div class="campera">
                     <img src="./img/reebok/reebok (5).png" alt="Campera reebok" class="frente">
                     <img src="./img/reebok/reebok (6).png" alt="Campera reebok" class="dorso">
                     <div class="contenedor-camperas">
-                        <h3>Camperas Adidas</h3>
-                        <p>$35000</p>
-                        <button class="comprar" data-id="10" data-nombre="Producto 1" data-precio="10">agregar al carrito</button>
+                        <h3>campera reebok 2001</h3>
+                        <p>$29000</p>
+                        <button class="comprar" data-id="10" data-nombre="campera reebok 2001" data-precio="29000">agregar al carrito</button>
+                    </div>
+                </div>
+
+                <div class="campera">
+                    <img src="./img/reebok/reebok (7).png" alt="Campera reebok" class="frente">
+                    <img src="./img/reebok/reebok (8).png" alt="Campera reebok" class="dorso">
+                    <div class="contenedor-camperas">
+                        <h3>Reebok sobresaliente</h3>
+                        <p>$34000</p>
+                        <button class="comprar" data-id="10" data-nombre="Reebok sobresaliente" data-precio="34000">agregar al carrito</button>
                     </div>
                 </div>
             </div>
