correciones en type

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body>
     <header>
         <div class="encabezado">
-            <img src="./img/logo.png" alt="logo" width="15%" class="logo">
+            <img src="./img/logo.png" alt="logo" class="logo">
             <h1 class="titulo">old soul</h1>
         </div>
         <hr style="border: 2px solid #353232;">
@@ -67,17 +67,17 @@
             
                 <div class="img-inicio">
                     <div class="campera-inicio">
-                        <img src="./img/adidas/adidas (1).png" alt="campera adidas" class="frente">
-                        <img src="./img/adidas/adidas (2).png" alt="campera adidas" class="dorso">
+                        <img src="./img/adidas/adidas(1).png" alt="campera adidas" class="frente">
+                        <img src="./img/adidas/adidas(2).png" alt="campera adidas" class="dorso">
                         <div class="contenedor-camperas">
                             <h3>Camperas Adidas</h3>
-                            <p style="color: black">campera rompe vientos</p>
+                            <p >campera rompe vientos</p>
                             <p>$35000</p>
                         </div>
                     </div>
                     <div class="campera-inicio">
-                        <img src="./img/delfin (1).png" alt="campera delfin" class="frente">
-                        <img src="./img/delfin (2).png" alt="campera delfin" class="dorso">
+                        <img src="./img/delfin(3).png" alt="campera delfin" class="frente">
+                        <img src="./img/delfin(4).png" alt="campera delfin" class="dorso">
                         <div class="contenedor-camperas">
                             <h3>Camperas Delfin</h3>
                             <p style="color: black">interior corderoi</p>
@@ -85,8 +85,8 @@
                         </div>
                     </div>
                     <div class="campera-inicio">
-                        <img src="./img/black (1).png" alt="campera negra" class="frente">
-                        <img src="./img/black (2).png" alt="campera negra" class="dorso">
+                        <img src="./img/black(1).png" alt="campera negra" class="frente">
+                        <img src="./img/black(2).png" alt="campera negra" class="dorso">
                         <div class="contenedor-camperas">
                             <h3>Camperas Negra</h3>
                             <p style="color: black">campera rompe vientos<br>
@@ -127,22 +127,22 @@
         <div class="redes">
             <p class="titulo-redes">seguinos en nuestras redes</p>
             <ul class="nav-redes">
-                <a href="https://x.com/?lang=es">
-                    <li><i class="fa-brands fa-twitter"></i></li>
-                </a>
-                <a href="https://www.youtube.com/?app=desktop&hl=es">
-                    <li><i class="fa-brands fa-youtube"></i></li>
-                </a>
-                <a href="https://www.facebook.com/?locale=es_LA">
-                    <li><i class="fa-brands fa-facebook-f"></i></li>
-                </a>
-                <a href="https://www.facebook.com/?locale=es_LA">
-                    <li><i class="fa-brands fa-instagram"></i></li>
-                </a>
+                <li><a href="https://x.com/?lang=es">
+                    <i class="fa-brands fa-twitter"></i>
+                </a></li>
+                <li><a href="https://www.youtube.com/?app=desktop&hl=es">
+                    <i class="fa-brands fa-youtube"></i>
+                </a></li>
+                <li><a href="https://www.facebook.com/?locale=es_LA">
+                    <i class="fa-brands fa-facebook-f"></i>
+                </a></li>
+                <li><a href="https://www.facebook.com/?locale=es_LA">
+                    <i class="fa-brands fa-instagram"></i>
+                </a></li>
             </ul>
         </div>
         <div class="encabezado-footer">
-            <p class="titulo-derechos">Kevin Nador ☺- Desarrollador Front-end. <br>Vintage old soul.inc . Todos los derechos reservados</a>
+            <p class="titulo-derechos">Kevin Nador ☺- Desarrollador Front-end. <br>Vintage old soul.inc . Todos los derechos reservados</p>
         </div>
     </footer>
     <script src="./javascript/script.js"></script>
