--- a/productos.html
+++ b/productos.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <div class="encabezado">
-            <img src="./img/logo.png" alt="logo" width="15%" class="logo">
+            <img src="./img/logo.png" alt="logo" class="logo">
             <h1 class="titulo">old soul</h1>
         </div>
         <hr style="border: 2px solid #353232;">
@@ -44,8 +44,8 @@
             </div>
             <div class="img-adidas">
                 <div class="campera">
-                    <img src="./img/adidas/adidas (1).png" alt="Campera Adidas frente"  class="frente">
-                    <img src="./img/adidas/adidas (2).png" alt="Campera Adidas dorso" class="dorso">
+                    <img src="./img/adidas/adidas(1).png" alt="Campera Adidas frente"  class="frente">
+                    <img src="./img/adidas/adidas(2).png" alt="Campera Adidas dorso" class="dorso">
                     <div class="contenedor-camperas">
                         <h3>Camperas Adidas 1998</h3>
                         <p>$26000</p>
@@ -53,8 +53,8 @@
                     </div>
                 </div>
                 <div class="campera">
-                    <img src="./img/adidas/adidas (3).png" alt="Campera Adidas dorso" class="dorso">
-                    <img src="./img/adidas/adidas (4).png" alt="Campera Adidas frente" class="frente">
+                    <img src="./img/adidas/adidas(3).png" alt="Campera Adidas dorso" class="dorso">
+                    <img src="./img/adidas/adidas(4).png" alt="Campera Adidas frente" class="frente">
                     <div class="contenedor-camperas">
                         <h3>Camperas Adidas white</h3>
                         <p>$35000</p>
@@ -63,8 +63,8 @@
                 </div>
 
                 <div class="campera">
-                    <img src="./img/adidas/adidas (5).png" alt="Campera Adidas dorso" class="dorso">
-                    <img src="./img/adidas/adidas (6).png" alt="Campera Adidas frente" class="frente">
+                    <img src="./img/adidas/adidas(5).png" alt="Campera Adidas dorso" class="dorso">
+                    <img src="./img/adidas/adidas(6).png" alt="Campera Adidas frente" class="frente">
                     <div class="contenedor-camperas">
                         <h3>Adidas edicion limitada</h3>
                         <p>$40000</p>
@@ -80,8 +80,8 @@
             </div>
             <div class="img-nike">
                 <div class="campera">
-                    <img src="./img/nike/nike (1).png" alt="Campera nike" class="frente">
-                    <img src="./img/nike/nike (2).png" alt="Campera nike" class="dorso">
+                    <img src="./img/nike/nike(1).png" alt="Campera nike" class="frente">
+                    <img src="./img/nike/nike(2).png" alt="Campera nike" class="dorso">
                     <div class="contenedor-camperas">
                         <h3>Camperas Nike</h3>
                         <p>$45000</p>
@@ -89,8 +89,8 @@
                     </div>
                 </div>
                 <div class="campera">
-                    <img src="./img/nike/nike (3).png" alt="Campera nike" class="frente">
-                    <img src="./img/nike/nike (4).png" alt="Campera nike" class="dorso">
+                    <img src="./img/nike/nike(3).png" alt="Campera nike" class="frente">
+                    <img src="./img/nike/nike(4).png" alt="Campera nike" class="dorso">
                     <div class="contenedor-camperas">
                         <h3>Camperas Nike Azul</h3>
                         <p>$30999</p>
@@ -98,8 +98,8 @@
                     </div>
                 </div>
                 <div class="campera">
-                    <img src="./img/nike/nike (5).png" alt="Campera nike" class="frente">
-                    <img src="./img/nike/nike (6).png" alt="Campera nike" class="dorso">
+                    <img src="./img/nike/nike(5).png" alt="Campera nike" class="frente">
+                    <img src="./img/nike/nike(6).png" alt="Campera nike" class="dorso">
                     <div class="contenedor-camperas">
                         <h3>Camperas Nike Roja</h3>
                         <p>$27800</p>
@@ -108,8 +108,8 @@
                 </div>
 
                 <div class="campera">
-                    <img src="./img/nike/nike (7).png" alt="Campera nike" class="frente">
-                    <img src="./img/nike/nike (8).png" alt="Campera nike" class="dorso">
+                    <img src="./img/nike/nike(7).png" alt="Campera nike" class="frente">
+                    <img src="./img/nike/nike(8).png" alt="Campera nike" class="dorso">
                     <div class="contenedor-camperas">
                         <h3>Nike Edicion Limitada</h3>
                         <p>$39800</p>
@@ -125,8 +125,8 @@
             </div>
             <div class="img-puma">
                 <div class="campera">
-                    <img src="./img/puma/puma (1).png" alt="Campera puma" class="frente">
-                    <img src="./img/puma/puma (2).png" alt="Campera puma" class="dorso">
+                    <img src="./img/puma/puma(1).png" alt="Campera puma" class="frente">
+                    <img src="./img/puma/puma(2).png" alt="Campera puma" class="dorso">
                     <div class="contenedor-camperas">
                         <h3>Chaqueta Puma </h3>
                         <p>$27800</p>
@@ -134,8 +134,8 @@
                     </div>
                 </div>
                 <div class="campera">
-                    <img src="./img/puma/puma (3).png" alt="Campera puma" class="frente">
-                    <img src="./img/puma/puma (4).png" alt="Campera puma" class="dorso">
+                    <img src="./img/puma/puma(3).png" alt="Campera puma" class="frente">
+                    <img src="./img/puma/puma(4).png" alt="Campera puma" class="dorso">
                     <div class="contenedor-camperas">
                         <h3>Chaqueta Puma 1997</h3>
                         <p>$30500</p>
@@ -151,8 +151,8 @@
             </div>
             <div class="img-reebok">
                 <div class="campera">
-                    <img src="./img/reebok/reebok (1).png" alt="Campera reebok" class="frente">                
-                    <img src="./img/reebok/reebok (2).png" alt="Campera reebok" class="dorso">
+                    <img src="./img/reebok/reebok(1).png" alt="Campera reebok" class="frente">                
+                    <img src="./img/reebok/reebok(2).png" alt="Campera reebok" class="dorso">
                     <div class="contenedor-camperas">
                         <h3>Campera Parachute reebook</h3>
                         <p>$25400</p>
@@ -160,8 +160,8 @@
                     </div>
                 </div>
                 <div class="campera">
-                    <img src="./img/reebok/reebok (3).png" alt="Campera reebok" class="frente">
-                    <img src="./img/reebok/reebok (4).png" alt="Campera reebok" class="dorso">
+                    <img src="./img/reebok/reebok(3).png" alt="Campera reebok" class="frente">
+                    <img src="./img/reebok/reebok(4).png" alt="Campera reebok" class="dorso">
                     <div class="contenedor-camperas">
                         <h3>Campera reebook</h3>
                         <p>$22000</p>
@@ -169,8 +169,8 @@
                     </div>
                 </div>
                 <div class="campera">
-                    <img src="./img/reebok/reebok (5).png" alt="Campera reebok" class="frente">
-                    <img src="./img/reebok/reebok (6).png" alt="Campera reebok" class="dorso">
+                    <img src="./img/reebok/reebok(5).png" alt="Campera reebok" class="frente">
+                    <img src="./img/reebok/reebok(6).png" alt="Campera reebok" class="dorso">
                     <div class="contenedor-camperas">
                         <h3>campera reebok 2001</h3>
                         <p>$29000</p>
@@ -179,8 +179,8 @@
                 </div>
 
                 <div class="campera">
-                    <img src="./img/reebok/reebok (7).png" alt="Campera reebok" class="frente">
-                    <img src="./img/reebok/reebok (8).png" alt="Campera reebok" class="dorso">
+                    <img src="./img/reebok/reebok(7).png" alt="Campera reebok" class="frente">
+                    <img src="./img/reebok/reebok(8).png" alt="Campera reebok" class="dorso">
                     <div class="contenedor-camperas">
                         <h3>Reebok sobresaliente</h3>
                         <p>$34000</p>
