--- a/contacto.html
+++ b/contacto.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <div class="encabezado">
-            <img src="./img/logo.png" alt="logo" width="15%" class="logo">
+            <img src="./img/logo.png" alt="logo" class="logo">
             <h1 class="titulo">old soul</h1>
         </div>
         <hr style="border: 2px solid #353232;">
