mejoramiento de imagenes, calidad en px

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <img src="./img/adidas/adidas(2).png" alt="campera adidas" class="dorso">
                         <div class="contenedor-camperas">
                             <h2>Camperas Adidas</h2>
-                            <p >campera rompe vientos</p>
+                            <p style="color: black">campera rompe vientos</p>
                             <p>$35000</p>
                         </div>
                     </div>
@@ -79,7 +79,7 @@
                         <img src="./img/delfin(3).png" alt="campera delfin" class="frente">
                         <img src="./img/delfin(4).png" alt="campera delfin" class="dorso">
                         <div class="contenedor-camperas">
-                            <h3>Camperas Delfin</h3>
+                            <h2>Camperas Delfin</h2>
                             <p style="color: black">interior corderoi</p>
                             <p>$26000</p>
                         </div>
@@ -88,7 +88,7 @@
                         <img src="./img/black(1).png" alt="campera negra" class="frente">
                         <img src="./img/black(2).png" alt="campera negra" class="dorso">
                         <div class="contenedor-camperas">
-                            <h3>Camperas Negra</h3>
+                            <h2>Camperas Negra</h2>
                             <p style="color: black">campera rompe vientos<br>
                                 cordones ajustable</p>
                             <p>$29000</p>
