--- a/compra.html
+++ b/compra.html
@@ -59,26 +59,26 @@
     <button type="submit" id="botonEnviar">Confirmar Compra</button>
   </form>
 
-  <footer>
+    <footer>
         <div class="redes">
             <p class="titulo-redes">seguinos en nuestras redes</p>
             <ul class="nav-redes">
-                <a href="https://x.com/?lang=es">
-                    <li><i class="fa-brands fa-twitter"></i></li>
-                </a>
-                <a href="https://www.youtube.com/?app=desktop&hl=es">
-                    <li><i class="fa-brands fa-youtube"></i></li>
-                </a>
-                <a href="https://www.facebook.com/?locale=es_LA">
-                    <li><i class="fa-brands fa-facebook-f"></i></li>
-                </a>
-                <a href="https://www.facebook.com/?locale=es_LA">
-                    <li><i class="fa-brands fa-instagram"></i></li>
-                </a>
+                <li><a href="https://x.com/?lang=es">
+                    <i class="fa-brands fa-twitter"></i>
+                </a></li>
+                <li><a href="https://www.youtube.com/?app=desktop&hl=es">
+                    <i class="fa-brands fa-youtube"></i>
+                </a></li>
+                <li><a href="https://www.facebook.com/?locale=es_LA">
+                    <i class="fa-brands fa-facebook-f"></i>
+                </a></li>
+                <li><a href="https://www.facebook.com/?locale=es_LA">
+                    <i class="fa-brands fa-instagram"></i>
+                </a></li>
             </ul>
         </div>
         <div class="encabezado-footer">
-            <p class="titulo-derechos">Kevin Nador ☺- Desarrollador Front-end. <br>Vintage old soul.inc . Todos los derechos reservados</a>
+            <p class="titulo-derechos">Kevin Nador ☺- Desarrollador Front-end. <br>Vintage old soul.inc . Todos los derechos reservados</p>
         </div>
     </footer>
 
