--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <!-- este link conecta con font awesome para insertar los logos de footer -->
 
+    <!-- Descripción para buscadores (SEO) -->
+    <meta name="description" content="Descubrí camperas deportivas de calidad, estilo urbano y diseño moderno. Envíos a todo el país. ¡Encontrá tu campera ideal hoy!">
+
+    <!-- Palabras clave para buscadores -->
+    <meta name="keywords" content="camperas deportivas, camperas adidas, ropa urbana, moda deportiva, tienda online, ropa de invierno, camperas hombre, camperas mujer">
+
+    <!-- Robots: permite indexar y seguir enlaces -->
+    <meta name="robots" content="INDEX, FOLLOW">
+
+
     <link rel="stylesheet" href="CSS/style.css">
     <!-- este link nos conecta con el css que cremamos como style.css -->
 
