error de acceso a instagram solucionado

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 <li><a href="https://www.facebook.com/?locale=es_LA">
                     <i class="fa-brands fa-facebook-f">facebook</i>
                 </a></li>
-                <li><a href="https://www.facebook.com/?locale=es_LA">
+                <li><a href="https://www.instagram.com">
                     <i class="fa-brands fa-instagram">instagram</i>
                 </a></li>
             </ul>
