--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 </div>
             </section>
             <section id="reseñas">
-            <h2>Reseñas de clientes</h2>
+            <h2 class="tituloreseñas">Reseñas de clientes</h2>
             <div class="carrusel-reseñas">
                 <button id="btn-anterior">⟵</button>
 
@@ -138,16 +138,16 @@
             <p class="titulo-redes">seguinos en nuestras redes</p>
             <ul class="nav-redes">
                 <li><a href="https://x.com/?lang=es">
-                    <i class="fa-brands fa-twitter">twitter</i>
+                    <i class="fa-brands fa-twitter">  twitter</i>
                 </a></li>
                 <li><a href="https://www.youtube.com/?app=desktop&hl=es">
-                    <i class="fa-brands fa-youtube">youtube</i>
+                    <i class="fa-brands fa-youtube">  youtube</i>
                 </a></li>
                 <li><a href="https://www.facebook.com/?locale=es_LA">
-                    <i class="fa-brands fa-facebook-f">facebook</i>
+                    <i class="fa-brands fa-facebook-f">  facebook</i>
                 </a></li>
                 <li><a href="https://www.instagram.com">
-                    <i class="fa-brands fa-instagram">instagram</i>
+                    <i class="fa-brands fa-instagram">  instagram</i>
                 </a></li>
             </ul>
         </div>
