--- a/compra.html
+++ b/compra.html
@@ -59,28 +59,28 @@
     <button type="submit" id="botonEnviar">Confirmar Compra</button>
   </form>
 
-    <footer>
+  <footer>
         <div class="redes">
             <p class="titulo-redes">seguinos en nuestras redes</p>
             <ul class="nav-redes">
                 <li><a href="https://x.com/?lang=es">
-                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-twitter">  twitter</i>
                 </a></li>
                 <li><a href="https://www.youtube.com/?app=desktop&hl=es">
-                    <i class="fa-brands fa-youtube"></i>
+                    <i class="fa-brands fa-youtube">  youtube</i>
                 </a></li>
                 <li><a href="https://www.facebook.com/?locale=es_LA">
-                    <i class="fa-brands fa-facebook-f"></i>
+                    <i class="fa-brands fa-facebook-f">  facebook</i>
                 </a></li>
-                <li><a href="https://www.facebook.com/?locale=es_LA">
-                    <i class="fa-brands fa-instagram"></i>
+                <li><a href="https://www.instagram.com">
+                    <i class="fa-brands fa-instagram">  instagram</i>
                 </a></li>
             </ul>
         </div>
         <div class="encabezado-footer">
             <p class="titulo-derechos">Kevin Nador ☺- Desarrollador Front-end. <br>Vintage old soul.inc . Todos los derechos reservados</p>
         </div>
-    </footer>
+  </footer>
 
   <script src="./javascript/compra.js"></script>
 
