--- a/contacto.html
+++ b/contacto.html
@@ -53,16 +53,16 @@
             <p class="titulo-redes">seguinos en nuestras redes</p>
             <ul class="nav-redes">
                 <li><a href="https://x.com/?lang=es">
-                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-twitter">  twitter</i>
                 </a></li>
                 <li><a href="https://www.youtube.com/?app=desktop&hl=es">
-                    <i class="fa-brands fa-youtube"></i>
+                    <i class="fa-brands fa-youtube">  youtube</i>
                 </a></li>
                 <li><a href="https://www.facebook.com/?locale=es_LA">
-                    <i class="fa-brands fa-facebook-f"></i>
+                    <i class="fa-brands fa-facebook-f">  facebook</i>
                 </a></li>
-                <li><a href="https://www.facebook.com/?locale=es_LA">
-                    <i class="fa-brands fa-instagram"></i>
+                <li><a href="https://www.instagram.com">
+                    <i class="fa-brands fa-instagram">  instagram</i>
                 </a></li>
             </ul>
         </div>
