--- a/productos.html
+++ b/productos.html
@@ -26,10 +26,9 @@
                 <li><a href="productos.html">Productos</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
                 <li><a href="ubicacion.html">Ubicacion</a></li>
-                <li>
-                    <a href="#" id="icono-carrito" class="carrito-icono">
-                        <i class="fa-solid fa-cart-shopping"></i>
-                        <span id="contador-carrito" class="contador-carrito">0</span>
+                <li><a href="#" id="icono-carrito" class="carrito-icono">
+                    <i class="fa-solid fa-cart-shopping"></i>
+                    <span id="contador-carrito" class="contador-carrito">0</span>
                     </a>
                 </li>
             </ul>
