--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <h1 class="titulo">old soul</h1>
         </div>
         <hr style="border: 2px solid #353232;">
-        <nav>
+        <nav style="margin-top: 10px;">
             <ul class="nav-lista">
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="productos.html">Productos</a></li>
