copiando el header para cada html

--- a/ubicacion.html
+++ b/ubicacion.html
@@ -1,21 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-        <link rel="preconnect" href="https://fonts.googleapis.com">
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <!-- estos links conectan con la tipografia de estilo de letras -->
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Honk&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <!-- este link conecta con font awesome para insertar los logos de footer -->
+
+    <!-- Descripción para buscadores (SEO) -->
+    <meta name="description" content="Descubrí camperas deportivas de calidad, estilo urbano y diseño moderno. Envíos a todo el país. ¡Encontrá tu campera ideal hoy!">
+
+    <!-- Palabras clave para buscadores -->
+    <meta name="keywords" content="camperas deportivas, camperas adidas, ropa urbana, moda deportiva, tienda online, ropa de invierno, camperas hombre, camperas mujer">
+
+    <!-- Robots: permite indexar y seguir enlaces -->
+    <meta name="robots" content="INDEX, FOLLOW">
+
 
     <link rel="stylesheet" href="CSS/style.css">
     <!-- este link nos conecta con el css que cremamos como style.css -->
 
-    <title>Old soul-Ubicacion</title>
+    <title>old soul</title>
+    
+
 </head>
 
 <body>
